# oop-labs-ref

./: .gitignore  CMakeLists.txt  README.md
lab1/: CMakeLists.txt
lab1/include/chess/: chess.h
lab1/src/: CMakeLists.txt  board.cc  board_builder.cc  piece.cc  point.cc
lab1/test/: CMakeLists.txt  board_tests.cc  piece_tests.cc  point_tests.cc
lab2/: CMakeLists.txt
lab2/include/chess/: chess.h
lab2/src/: CMakeLists.txt  board.cc  board_builder.cc  piece.cc
lab2/test/: CMakeLists.txt  board_tests.cc  piece_tests.cc
lab3/: CMakeLists.txt
lab3/include/chess/: chess.h
lab3/src/: CMakeLists.txt  board.cc  board_builder.cc  piece.cc
lab3/test/: CMakeLists.txt  board_tests.cc  piece_tests.cc
